--- a/admin.html
+++ b/admin.html
@@ -4,7 +4,6 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Admin Narapoi</title>
-
 <style>
 body{
   margin:0;
@@ -27,13 +26,18 @@ input,button,textarea{
   color:#fff;
 }
 button{background:#3b82f6;color:#fff;font-weight:600;cursor:pointer}
+.downloads-container{
+  display:flex;
+  flex-direction:column;
+  gap:6px;
+  margin-bottom:12px;
+}
 .download-row{
-  display:flex; gap:6px; margin-bottom:6px;
+  display:flex;
+  gap:6px;
 }
 .download-row input{flex:1}
 .download-row button{width:42px;background:#ff0055}
-.downloads-container{margin-bottom:12px}
-textarea{resize:none}
 .preview-btn{
   background:#2563eb;
   padding:10px;
@@ -42,12 +46,13 @@ textarea{resize:none}
   text-align:center;
   font-weight:600;
   cursor:pointer;
+  white-space:pre-wrap;
 }
 .row{display:flex;gap:6px;margin-top:4px;}
 .row button{flex:1}
+.dragging{opacity:.5}
 </style>
 </head>
-
 <body>
 <div class="wrap">
   <h2>Admin Narapoi</h2>
@@ -56,7 +61,7 @@ textarea{resize:none}
   <input id="title" placeholder="Judul video">
   <input id="src" placeholder="Link video (.mp4 / m3u8)">
 
-  <div class="small">Tombol Download</div>
+  <div>Tombol Download</div>
   <div class="downloads-container" id="downloads"></div>
   <button onclick="addDownload()">➕ Tambah tombol download</button>
 
@@ -68,7 +73,7 @@ textarea{resize:none}
     <button onclick="copyLink()">📋</button>
   </div>
 
-  <div class="small">Preview</div>
+  <div>Preview</div>
   <div id="preview" class="preview-btn">Player muncul di sini</div>
 
   <h3>History</h3>
@@ -77,6 +82,7 @@ textarea{resize:none}
 
 <script>
 const $ = id => document.getElementById(id);
+let dragged=null;
 
 // ===== DOWNLOAD FIELD =====
 function addDownload(label='', url=''){
@@ -88,29 +94,38 @@ function addDownload(label='', url=''){
     <input placeholder="Link" value="${url}">
     <button onclick="this.parentNode.remove()">❌</button>`;
   
-  // Drag & drop
-  d.addEventListener('dragstart', e=>{ e.dataTransfer.setData('text/plain', null); d.classList.add('dragging'); });
-  d.addEventListener('dragend', e=>{ d.classList.remove('dragging'); });
+  // Drag events
+  d.addEventListener('dragstart', ()=>dragged=d);
   d.addEventListener('dragover', e=>{
     e.preventDefault();
     const container = $('downloads');
-    const dragging = container.querySelector('.dragging');
-    const afterElement = getDragAfterElement(container, e.clientY);
-    if(afterElement==null) container.appendChild(dragging);
-    else container.insertBefore(dragging, afterElement);
+    const after = getDragAfterElement(container, e.clientY);
+    if(after==null) container.appendChild(dragged);
+    else container.insertBefore(dragged, after);
+  });
+
+  // Touch support
+  let touchStartY=0;
+  d.addEventListener('touchstart', e=>{ touchStartY=e.touches[0].clientY; dragged=d; });
+  d.addEventListener('touchmove', e=>{
+    e.preventDefault();
+    const y=e.touches[0].clientY;
+    const container=$('downloads');
+    const after=getDragAfterElement(container,y);
+    if(after==null) container.appendChild(dragged);
+    else container.insertBefore(dragged,after);
   });
 
   $('downloads').appendChild(d);
 }
-
 function getDragAfterElement(container, y){
-  const draggableElements = [...container.querySelectorAll('.download-row:not(.dragging)')];
-  return draggableElements.reduce((closest, child)=>{
-    const box = child.getBoundingClientRect();
-    const offset = y - box.top - box.height/2;
-    if(offset<0 && offset>closest.offset){ return {offset:offset, element:child}; }
+  const els=[...container.querySelectorAll('.download-row:not(.dragging)')];
+  return els.reduce((closest, child)=>{
+    const box=child.getBoundingClientRect();
+    const offset=y-(box.top+box.height/2);
+    if(offset<0 && offset>closest.offset) return {offset:offset,element:child};
     return closest;
-  }, {offset:Number.NEGATIVE_INFINITY}).element;
+  },{offset:Number.NEGATIVE_INFINITY}).element;
 }
 
 // ===== SAVE / GENERATE =====
@@ -120,54 +135,49 @@ function save(){
   const src = $('src').value.trim();
   if(!title||!src) return alert('Lengkapi semua field');
 
-  if(!id) id = 'vid_'+Date.now().toString(36);
+  if(!id) id='vid_'+Date.now().toString(36);
 
   const downloads=[];
   document.querySelectorAll('.download-row').forEach(r=>{
-    if(r.children[1].value) downloads.push({label:r.children[0].value||'Download', url:r.children[1].value});
+    if(r.children[1].value) downloads.push({label:r.children[0].value||'Download',url:r.children[1].value});
   });
-  if(!downloads.length) downloads.push({label:'Download', url:src});
+  if(!downloads.length) downloads.push({label:'Download',url:src});
 
-  const data = {[id]:{title, src, downloads}};
+  const data={[id]:{title,src,downloads}};
   
-  fetch('/videos',{method:'POST', headers:{'Content-Type':'application/json'}, body:JSON.stringify(data)})
-    .then(()=>{
-      const link = location.origin + '/?v=' + id;
-      $('link').value = link;
-      alert('Tersimpan!');
-      renderPreview(data[id]);
-      saveHistory(data, id);
-    });
+  fetch('/videos',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(data)})
+  .then(()=>{
+    const link=location.origin+'/?v='+id;
+    $('link').value=link;
+    alert('Tersimpan!');
+    renderPreview(data[id]);
+    saveHistory(data,id);
+  });
 }
 
 // ===== COPY LINK =====
-function copyLink(){
-  $('link').select();
-  navigator.clipboard.writeText($('link').value);
-  alert('Link disalin');
-}
+function copyLink(){ $('link').select(); navigator.clipboard.writeText($('link').value); alert('Link disalin'); }
 
 // ===== PREVIEW =====
 function renderPreview(v){
-  $('preview').textContent = `Judul: ${v.title}\nLink player: ${v.src}\nDownload: ${v.downloads.map(d=>d.label).join(', ')}`;
+  $('preview').textContent=`Judul: ${v.title}\nLink player: ${v.src}\nDownload: ${v.downloads.map(d=>d.label).join(', ')}`;
 }
 
 // ===== HISTORY =====
-function saveHistory(data, id){
-  let h = JSON.parse(localStorage.getItem('history')||'[]');
+function saveHistory(data,id){
+  let h=JSON.parse(localStorage.getItem('history')||'[]');
   h.unshift(data);
-  localStorage.setItem('history', JSON.stringify(h.slice(0,10)));
+  localStorage.setItem('history',JSON.stringify(h.slice(0,10)));
   renderHistory();
 }
-
 function renderHistory(){
-  const h = JSON.parse(localStorage.getItem('history')||'[]');
+  const h=JSON.parse(localStorage.getItem('history')||'[]');
   $('history').innerHTML='';
   h.forEach((o,i)=>{
-    const k = Object.keys(o)[0], v=o[k];
-    const div = document.createElement('div');
+    const k=Object.keys(o)[0],v=o[k];
+    const div=document.createElement('div');
     div.className='card';
-    div.innerHTML = `<b>${k}</b> — ${v.title}
+    div.innerHTML=`<b>${k}</b> — ${v.title}
       <div class="row">
         <button onclick="previewHistory(${i})">Preview</button>
         <button onclick="editHistory(${i})">Edit</button>
@@ -176,27 +186,19 @@ function renderHistory(){
     $('history').appendChild(div);
   });
 }
-
 function previewHistory(i){
-  const h = JSON.parse(localStorage.getItem('history')||'[]');
-  const k = Object.keys(h[i])[0], v=h[i][k];
-  $('id').value = k;
-  $('title').value = v.title;
-  $('src').value = v.src;
+  const h=JSON.parse(localStorage.getItem('history')||'[]');
+  const k=Object.keys(h[i])[0],v=h[i][k];
+  $('id').value=k; $('title').value=v.title; $('src').value=v.src;
   $('downloads').innerHTML='';
   v.downloads.forEach(d=>addDownload(d.label,d.url));
-  $('link').value = location.origin + '/?v=' + k;
+  $('link').value=location.origin+'/?v='+k;
   renderPreview(v);
 }
-
-function editHistory(i){
-  previewHistory(i);
-}
-
+function editHistory(i){ previewHistory(i); }
 function delHistory(i){
-  let h = JSON.parse(localStorage.getItem('history')||'[]');
-  h.splice(i,1);
-  localStorage.setItem('history', JSON.stringify(h));
+  let h=JSON.parse(localStorage.getItem('history')||'[]'); h.splice(i,1);
+  localStorage.setItem('history',JSON.stringify(h));
   renderHistory();
 }
 
