--- a/admin.html
+++ b/admin.html
@@ -5,23 +5,32 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Admin Narapoi</title>
 <style>
-*{box-sizing:border-box;margin:0;padding:0;font-family:system-ui}
-body{background:#0b0b0b;color:#fff;padding:16px}
-.wrap{max-width:480px;margin:auto;display:flex;flex-direction:column;gap:12px}
-input,textarea,button{border:none;border-radius:10px;padding:10px;color:#fff;background:#161616}
-textarea{resize:none}
-button{cursor:pointer;background:#3b82f6;font-weight:600;display:flex;align-items:center;justify-content:center;gap:6px}
-.downloads-container{display:flex;flex-direction:column;gap:6px}
-.download-row{display:flex;gap:6px;align-items:center;background:#222;padding:6px;border-radius:8px;cursor:grab}
-.download-row input{flex:1}
-.download-row button{width:40px;height:40px;display:flex;align-items:center;justify-content:center;background:#ff3b3b;padding:6px;border-radius:6px}
-.preview-btn{background:#2563eb;padding:12px;border-radius:10px;margin-top:6px;font-weight:600;text-align:center}
-.row{display:flex;gap:6px;margin-top:4px}
-.row button{flex:1;display:flex;align-items:center;justify-content:center;gap:4px;padding:8px}
-.dragging{opacity:.5}
-.history-card{background:#111;padding:8px;border-radius:10px;display:flex;flex-direction:column;gap:4px;margin-bottom:6px}
-.link-container{display:flex;gap:6px}
-.link-container textarea{flex:1}
+* { box-sizing: border-box; margin: 0; padding: 0; font-family: system-ui; }
+body { background: #0b0b0b; color: #fff; padding: 16px; }
+.wrap { max-width: 480px; margin: auto; display: flex; flex-direction: column; gap: 16px; }
+h2, h3 { margin-bottom: 8px; }
+input, textarea, button { border: none; border-radius: 10px; padding: 10px; color: #fff; background: #161616; font-size: 14px; }
+textarea { resize: none; min-height: 40px; }
+button { cursor: pointer; display: flex; align-items: center; justify-content: center; gap: 6px; font-weight: 600; transition: 0.2s; }
+button:hover { opacity: 0.85; }
+.downloads-container { display: flex; flex-direction: column; gap: 8px; margin-bottom: 8px; }
+.download-row { display: flex; gap: 6px; align-items: center; background: #222; padding: 6px; border-radius: 8px; cursor: grab; }
+.download-row input { flex: 1; font-size: 13px; padding: 6px; border-radius: 6px; }
+.download-row button { width: 36px; height: 36px; display: flex; align-items: center; justify-content: center; background: #ff3b3b; padding: 6px; border-radius: 6px; }
+.preview-btn { background: #2563eb; padding: 12px; border-radius: 10px; margin-top: 6px; font-weight: 600; text-align: center; min-height: 50px; display: flex; align-items: center; justify-content: center; white-space: pre-wrap; }
+.row { display: flex; gap: 6px; margin-top: 4px; flex-wrap: wrap; }
+.row button { flex: 1; display: flex; align-items: center; justify-content: center; gap: 4px; padding: 8px; font-size: 13px; }
+.dragging { opacity: 0.5; }
+.history-card { background: #111; padding: 8px; border-radius: 10px; display: flex; flex-direction: column; gap: 6px; margin-bottom: 6px; word-break: break-word; }
+.link-container { display: flex; gap: 6px; margin-bottom: 8px; }
+.link-container textarea { flex: 1; font-size: 13px; padding: 6px; border-radius: 6px; min-height: 40px; }
+@media (max-width: 500px){
+  .wrap { padding: 12px; }
+  input, textarea, button { font-size: 13px; }
+  .download-row input { font-size: 12px; }
+  .row button { font-size: 12px; padding: 6px; }
+  .preview-btn { font-size: 13px; padding: 10px; min-height: 45px; }
+}
 </style>
 </head>
 <body>
@@ -67,6 +76,7 @@ button{cursor:pointer;background:#3b82f6;font-weight:600;display:flex;align-item
 </div>
 
 <script>
+/* --- Semua logic JS kamu tetap sama, tidak diubah/hapus --- */
 const $ = id=>document.getElementById(id);
 let dragged=null;
 
